--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,16 @@ jobs:
       - name: Get tag
         id: tag
         uses: dawidd6/action-get-tag@v1.1.0
-
-      - name: Build and publish a Docker image for ${{ github.repository }}
-        uses: macbre/push-to-ghcr@v12
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          image_name: ${{ github.repository }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          image_tag: ${{ steps.tag.outputs.tag }}
+          username: $GITHUB_REPOSITORY_OWNER
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3.2.0
+        with:
+          context: .
+          push: true
+          tags: |
+            $GITHUB_REPOSITORY_OWNER/contributed-to:api-${{ steps.tag.outputs.tag }}
