--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ axum = "0.7.4"
 clap = { version = "4.4.18", features = ["derive", "env"] }
 clap-verbosity-flag = "2.1.2"
 graphql_client = "0.13.0"
+octocrab = "0.33.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
 tokio = { version = "1.0", features = ["full"] }
